更换虚拟线程为普通线程